--- a/.gitignore
+++ b/.gitignore
@@ -186,5 +186,6 @@ cython_debug/
 .ionide
 
 # Support for Project snippet scope
-
+.ipynb_checkpoints/*
+*checkpoint*
 # End of https://www.toptal.com/developers/gitignore/api/python,visualstudiocode,jupyternotebooks
